fixed responsive issues

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,17 +14,17 @@
 
 		<!-- Header -->
 		<header>
-			<div class="header_inner">
+			<div class="header-inner">
 
-				<img class="logo" src="udacity_logo.png" alt="Udacity Logo">
+				<img class="logo" src="Images\udacity_logo.png" alt="Udacity Logo">
 				<div class="header-container">
-					<h1>Baruch Elias</h1>
-					<h3>Front End Web Developer</h3>
+					<h1 class="name">Baruch Elias</h1>
+					<h3 class="title">Front End Web Developer</h3>
 				</div>
 			</div>
 		</header>
 
-		<hr>
+		<hr class="separator">
 
 		<!-- Portfolio -->
 		<content>
@@ -40,12 +40,12 @@
 				<div class="work-container">
 					
 					<div class="projects">
-						<figure>
-							<img src="Images\proj_1_placeholder.jpg" alt="Some Project">
-							<figcaption><a href="#">http://somewhere.something</a></figcaption>
+						<figure class="proj-fig">
+							<img src="Images\proj_1_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
-						<div class="project-container">
+						<div id="first" class="project-container">
 							<h1 class="project-title">Project 1 Title</h1>
 							<p class="project-description">Short summary of project</p>
 						</div>
@@ -53,12 +53,12 @@
 					</div>
 					
 					<div class="projects">
-						<figure>
-							<img src="Images\proj_1_placeholder.jpg" alt="Some Project">
-							<figcaption><a href="#">http://somewhere.something</a></figcaption>
+						<figure class="proj-fig">
+							<img src="Images\proj_2_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
-						<div class="project-container">
+						<div id="second" class="project-container">
 							<h1 class="project-title">Project 2 Title</h1>
 							<p class="project-description">Short summary of project</p>
 						</div>
@@ -66,12 +66,12 @@
 					</div>
 
 					<div class="projects">
-						<figure>
-							<img src="Images\proj_1_placeholder.jpg" alt="Some Project">
-							<figcaption><a href="#">http://somewhere.something</a></figcaption>
+						<figure class="proj-fig">
+							<img src="Images\proj_3_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
-						<div class="project-container">
+						<div id="third" class="project-container">
 							<h1 class="project-title">Project 3 Title</h1>
 							<p class="project-description">Short summary of project</p>
 						</div>
