validated html and css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"  content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 		<header>
 			<div class="header-inner">
 
-				<img class="logo" src="Images\udacity_logo.png" alt="Udacity Logo">
+				<img class="logo" src="Images/udacity_logo.png" alt="Udacity Logo">
 				<div class="header-container">
 					<h1 class="name">Baruch Elias</h1>
 					<h3 class="title">Front End Web Developer</h3>
@@ -27,11 +27,11 @@
 		<hr class="separator">
 
 		<!-- Portfolio -->
-		<content>
+		<section>
 
 			<!-- hero image -->
 			<div class="hero">
-				<img class="hero-image" src="Images\portfolio_pic.jpg" alt="Baruch Elias at Grow with Google South Carolina">
+				<img class="hero-image" src="Images/portfolio_pic.jpg" alt="Baruch Elias at Grow with Google South Carolina">
 			</div>
 			
 			<!-- projects -->
@@ -41,7 +41,7 @@
 					
 					<div class="projects">
 						<figure class="proj-fig">
-							<img src="Images\proj_1_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<img src="Images/proj_1_placeholder.jpg" alt="Some Project" class="fig-img">
 							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
@@ -54,7 +54,7 @@
 					
 					<div class="projects">
 						<figure class="proj-fig">
-							<img src="Images\proj_2_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<img src="Images/proj_2_placeholder.jpg" alt="Some Project" class="fig-img">
 							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
@@ -67,7 +67,7 @@
 
 					<div class="projects">
 						<figure class="proj-fig">
-							<img src="Images\proj_3_placeholder.jpg" alt="Some Project" width="300px" height="300px" class="fig-img">
+							<img src="Images/proj_3_placeholder.jpg" alt="Some Project" class="fig-img">
 							<figcaption class="fig-cap"><a href="#">http://somewhere.something</a></figcaption>
 						</figure>
 
@@ -82,7 +82,7 @@
 
 			</div>
 
-		</content>
+		</section>
 	</div>
 
 </body>
